# Boxshin

./: .gitignore  1  BoxShin.sln  Boxshin.vdproj  README.md  UpgradeLog.htm  liuhao_test.txt  关卡网址.txt
BoxShin/: BoxShin.vcxproj  BoxShin.vcxproj.filters  map_randow_create.h  map_scene.h  player.h  team_introduction_scene.h
VS2022/game_name/: animation.h  atlas.h  game_name.vcxproj  game_name.vcxproj.filters  item.h  player_lypo.h  (+2 more)
game_name/: enemy_crab.h  exit_scene.h
代码空间/: CMakeLists.txt
代码空间/VS2022/: .gitignore  game_name.sln
代码空间/VS2022/game_name/: animation.h  atlas.h  button.h  enemy.h  enemy_crab.h  enemy_fish.h  exit_scene.h  game_concrete_scene.h  game_introduction_scene.h  game_name.vcxproj  game_name.vcxproj.filters  game_pause_scene.h  game_scene.h  game_scene_concrete.h  game_scene_pause.h  item.h  main.cpp  map_randow_create.h  map_scene.h  menu_scene.h  player.h  player_diver.h  player_lypo.h  resources.h  scene.h  scene_manager.h  selector_scene.h  set_scene.h  special_player.h  team_introduction_scene.h  timer.h  util.h
代码空间/VS2022/game_name/x64/Debug/: game_name.exe.recipe  game_name.ilk  vc143.idb
代码空间/VS2022/game_name/x64/Debug/game_name.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  game_name.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
代码空间/cmake/include/: animation.h  selector_scene.h
代码空间/cmake/src/: main.cpp
代码空间/include/: atlas.h  button.h  game_scene.h  menu_scene.h  scene.h  scene_manager.h  util.h
需求文档/: XJZ.txt  游戏内功能需求.xlsx  游戏外功能需求.xlsx
(+4 files in other folders)
